docs/0.6/_sources/api/gammapy.irf.PSF3D.rst.txt


PSF3D
=================

.. currentmodule:: gammapy.irf

.. autoclass:: PSF3D
   :show-inheritance:

   
     
   

   
   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~PSF3D.containment_radius
      ~PSF3D.energy_logcenter
      ~PSF3D.evaluate
      ~PSF3D.from_table
      ~PSF3D.info
      ~PSF3D.peek
      ~PSF3D.plot_containment
      ~PSF3D.plot_containment_vs_energy
      ~PSF3D.plot_psf_vs_rad
      ~PSF3D.rad_center
      ~PSF3D.read
      ~PSF3D.to_energy_dependent_table_psf
      ~PSF3D.to_fits
      ~PSF3D.to_table_psf
      ~PSF3D.write

   
   

   
   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: containment_radius
   .. automethod:: energy_logcenter
   .. automethod:: evaluate
   .. automethod:: from_table
   .. automethod:: info
   .. automethod:: peek
   .. automethod:: plot_containment
   .. automethod:: plot_containment_vs_energy
   .. automethod:: plot_psf_vs_rad
   .. automethod:: rad_center
   .. automethod:: read
   .. automethod:: to_energy_dependent_table_psf
   .. automethod:: to_fits
   .. automethod:: to_table_psf
   .. automethod:: write

   
   