docs/0.18.1/_sources/api/gammapy.irf.PSF3D.rst.txt
PSF3D
=====

.. currentmodule:: gammapy.irf

.. autoclass:: PSF3D
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PSF3D.energy_axis_true
      ~PSF3D.offset_axis
      ~PSF3D.rad_axis
      ~PSF3D.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~PSF3D.containment_radius
      ~PSF3D.evaluate
      ~PSF3D.from_table
      ~PSF3D.peek
      ~PSF3D.plot_containment
      ~PSF3D.plot_containment_vs_energy
      ~PSF3D.plot_psf_vs_rad
      ~PSF3D.read
      ~PSF3D.to_energy_dependent_table_psf
      ~PSF3D.to_hdulist
      ~PSF3D.to_table_psf
      ~PSF3D.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy_axis_true
   .. autoattribute:: offset_axis
   .. autoattribute:: rad_axis
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: containment_radius
   .. automethod:: evaluate
   .. automethod:: from_table
   .. automethod:: peek
   .. automethod:: plot_containment
   .. automethod:: plot_containment_vs_energy
   .. automethod:: plot_psf_vs_rad
   .. automethod:: read
   .. automethod:: to_energy_dependent_table_psf
   .. automethod:: to_hdulist
   .. automethod:: to_table_psf
   .. automethod:: write
